--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "dedent": "^0.7.0",
-    "temp": "^0.8.3",
-    "yargs": "^10.0.3"
+    "minimist": "^1.2.0",
+    "temp": "^0.8.3"
   }
 }
